Fixed schedule margin on mobile

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -219,12 +219,16 @@ header
 	margin: 40px auto;
 }
 
+.twitch
+{
+	margin-bottom: 30px;
+}
+
 .twitch .twitch-video
 {
 	padding-top: 56.25%;
 	position: relative;
 	height: 0;
-	margin-bottom: 30px;
 }
 
 .twitch .twitch-video iframe
@@ -250,6 +254,7 @@ header
 @media screen and (min-width: 850px) {
   .twitch {
     position: relative;
+    margin-bottom: 0px;
   }
 
   .twitch .twitch-video {
@@ -312,11 +317,9 @@ a img:hover, a iframe:hover, a div:hover
 .card-thin
 {
 	width: 23%;
-	
 	text-align: center;
 	padding: 30px 15px 80px;
 	display: table-cell;
-
 }
 
 .card-margin
@@ -500,4 +503,5 @@ a img:hover, a iframe:hover, a div:hover
 #schedule
 {
 	width: 100%;
+	margin: 30px 0px;
 }
